--- a/css/editor.css
+++ b/css/editor.css
@@ -46,6 +46,10 @@
   transition: box-shadow 1s ease-in-out;
   box-shadow: 0px 0px 15px red;
 }
+.dark-versebeam {
+  transition: box-shadow 1s ease-in-out;
+  box-shadow: 0px 0px 15px #0FF;
+}
 .b-notes {
   height: 1px;
   width: 50%;
