Bugfix and improvements on the theme styling opt 2 1. Separator on the editors are visible again. 2. Removed the flex properties from basic theme style's topbar. 3. Add/remove wrapping property of the topbar on #selectbook click, and on #applybook click. 4. A few other small style improvements.

--- a/css/editor.css
+++ b/css/editor.css
@@ -56,6 +56,12 @@
   margin: 0.5em;
   background: black;
 }
+.dark-background .b-notes {
+  background: #efefef !important;
+}
+.light-background .b-notes {
+  background: #171717 !important;
+}
 [class^='i-note'] {
   cursor: pointer;
 }
